# TrusTrove-contract

./: .env.example  .gitignore  Cargo.toml  README.md  create-contract-issues.ps1  create-contract-issues.sh  create_issues.py  fix_tests.py
contracts/escrow/: Cargo.toml
contracts/escrow/src/: errors.rs  events.rs  lib.rs  test.rs  types.rs
contracts/escrow/test_snapshots/test/: prop_get_locked_returns_zero_after_handle_default.1.json  prop_get_locked_returns_zero_after_handle_default.10.json  prop_get_locked_returns_zero_after_handle_default.2.json  prop_get_locked_returns_zero_after_handle_default.3.json  prop_get_locked_returns_zero_after_handle_default.4.json  prop_get_locked_returns_zero_after_handle_default.5.json  prop_get_locked_returns_zero_after_handle_default.6.json  prop_get_locked_returns_zero_after_handle_default.7.json  prop_get_locked_returns_zero_after_handle_default.8.json  prop_get_locked_returns_zero_after_handle_default.9.json  prop_get_locked_returns_zero_after_release_to_issuer.1.json  prop_get_locked_returns_zero_after_release_to_issuer.10.json  prop_get_locked_returns_zero_after_release_to_issuer.11.json  prop_get_locked_returns_zero_after_release_to_issuer.12.json  prop_get_locked_returns_zero_after_release_to_issuer.13.json  prop_get_locked_returns_zero_after_release_to_issuer.14.json  prop_get_locked_returns_zero_after_release_to_issuer.15.json  (+122 more)
contracts/pool/: Cargo.toml
contracts/pool/proptest-regressions/: test.txt
contracts/pool/src/: errors.rs  events.rs  lib.rs  test.rs  types.rs
scripts/: deploy.sh  setup-testnet.sh  verify.sh
(+1428 files in other folders)
