[package]
name = "trusttrove-pool"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
trusttrove-common = { path = "../common" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
trusttrove-invoice = { path = "../invoice" }
trusttrove-escrow = { path = "../escrow" }
proptest = { workspace = true }

[features]
testutils = ["soroban-sdk/testutils"]
